base-infra-codes/aws/main.tf
#################################################################################################################################
# Data Blocks
#################################################################################################################################

data "template_file" "application1_install" {
  template = file("${path.module}/application1_install.sh")
}

data "template_file" "application2_install" {
  template = file("${path.module}/application2_install.sh")
}

#################################################################################################################################
#Locals
#################################################################################################################################

locals {
  vpc_cidr1    = "10.1.${var.pod_number}.0/24"
  vpc_cidr2    = "10.1.${var.pod_number + 100}.0/24"
  subnet_cidr1 = "10.1.${var.pod_number}.0/26"
  subnet_cidr2 = "10.1.${var.pod_number + 100}.0/26"
  app1_nic     = ["10.1.${var.pod_number}.10"]
  app2_nic     = ["10.1.${var.pod_number + 100}.10"]
}

#################################################################################################################################
#Application VPC & Subnet
#################################################################################################################################

resource "aws_vpc" "app_vpc" {
  count                = 2
  cidr_block           = count.index == 0 ? local.vpc_cidr1 : local.vpc_cidr2
  enable_dns_support   = true
  enable_dns_hostnames = true
  instance_tenancy     = "default"
  tags = {
    Name = "pod${var.pod_number}-app${count.index + 1}-vpc-aws"
  }
}

resource "aws_subnet" "app_subnet" {
  count             = 2
  vpc_id            = aws_vpc.app_vpc["${count.index}"].id
  cidr_block        = count.index == 0 ? local.subnet_cidr1 : local.subnet_cidr2
  availability_zone = "us-east-1a"
  tags = {
    Name = "pod${var.pod_number}-app${count.index + 1}-subnet-aws"
  }
}

resource "aws_subnet" "mgmt_subnet" {
  vpc_id            = aws_vpc.app_vpc[0].id
  cidr_block        = "10.1.${var.pod_number}.64/26"
  availability_zone = "us-east-1a"
  tags = {
    Name = "pod${var.pod_number}-mgmt-subnet"
  }
}

#################################################################################################################################
# Keypair
#################################################################################################################################

resource "tls_private_key" "key_pair" {
  algorithm = "RSA"
  rsa_bits  = 4096
}

resource "local_file" "private_key" {
  content         = tls_private_key.key_pair.private_key_openssh
  filename        = "pod${var.pod_number}-private-key"
  file_permission = 0700
}

resource "local_file" "public_key" {
  content         = tls_private_key.key_pair.public_key_openssh
  filename        = "pod${var.pod_number}-public-key"
  file_permission = 0700
}

resource "aws_key_pair" "sshkeypair" {
  key_name   = "pod${var.pod_number}-keypair"
  public_key = tls_private_key.key_pair.public_key_openssh
}

#################################################################################################################################
# EC2 Instance
#################################################################################################################################

resource "aws_instance" "AppMachines" {
  count         = 2
  ami           = "ami-053b0d53c279acc90"
  instance_type = "t2.micro"
  key_name      = "pod${var.pod_number}-keypair"
  user_data     = count.index == 0 ? data.template_file.application1_install.rendered : data.template_file.application2_install.rendered

  network_interface {
    network_interface_id = aws_network_interface.application_interface["${count.index}"].id
    device_index         = 0
  }

  provisioner "file" {
    source      = "./images/aws-app${count.index + 1}.png"
    destination = "/home/ubuntu/aws-app.png"

    connection {
      type        = "ssh"
      user        = "ubuntu"
      private_key = tls_private_key.key_pair.private_key_openssh
      host        = aws_eip.app-EIP["${count.index}"].public_ip
    }
  }

  provisioner "file" {
    source      = "./html/index.html"
    destination = "/home/ubuntu/index.html"

    connection {
      type        = "ssh"
      user        = "ubuntu"
      private_key = tls_private_key.key_pair.private_key_openssh
      host        = aws_eip.app-EIP["${count.index}"].public_ip
    }
  }

  provisioner "file" {
    source      = "./html/status${count.index + 1}"
    destination = "/home/ubuntu/status"

    connection {
      type        = "ssh"
      user        = "ubuntu"
      private_key = tls_private_key.key_pair.private_key_openssh
      host        = aws_eip.app-EIP["${count.index}"].public_ip
    }
  }


  tags = {
    Name = "pod${var.pod_number}-app${count.index + 1}"
    role = count.index == 0 ? "pod${var.pod_number}-prod" : "pod${var.pod_number}-shared"
  }
}

resource "aws_network_interface" "application_interface" {
  count = 2

  subnet_id   = aws_subnet.app_subnet["${count.index}"].id
  private_ips = count.index == 0 ? local.app1_nic : local.app2_nic
  tags = {
    Name = "pod${var.pod_number}-app${count.index + 1}-nic"
  }
}

#################################################################################################################################
# Internet Gateway
#################################################################################################################################

resource "aws_internet_gateway" "int_gw" {
  count  = 2
  vpc_id = aws_vpc.app_vpc["${count.index}"].id
  tags = {
    Name = "pod${var.pod_number}-app${count.index + 1}-igw"
  }
}


# #################################################################################################################################
# #Elastic IP
# #################################################################################################################################

resource "aws_eip" "app-EIP" {
  count  = 2
  domain = "vpc"
  tags = {
    Name = "pod${var.pod_number}-app${count.index + 1}-eip"
  }
}

resource "aws_eip_association" "app-eip-assocation" {
  count                = 2
  network_interface_id = aws_network_interface.application_interface["${count.index}"].id
  allocation_id        = aws_eip.app-EIP[count.index].id
}

# #################################################################################################################################
# #Security Group
# #################################################################################################################################

resource "aws_security_group" "allow_all" {
  count  = 2
  name   = "pod${var.pod_number}-app${count.index + 1}-sg"
  vpc_id = aws_vpc.app_vpc["${count.index}"].id

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "pod${var.pod_number}-app${count.index + 1}-sg"
  }
}

resource "aws_network_interface_sg_attachment" "app-sg" {
  count                = 2
  security_group_id    = aws_security_group.allow_all["${count.index}"].id
  network_interface_id = aws_network_interface.application_interface[count.index].id
}

##################################################################################################################################
#Routing Tables and Routes
##################################################################################################################################

resource "aws_route_table" "app-route" {
  count  = 2
  vpc_id = aws_vpc.app_vpc["${count.index}"].id
  tags = {
    Name = "pod${var.pod_number}-app${count.index + 1}-rt"
  }
}

resource "aws_route" "ext_default_route" {
  count                  = 2
  route_table_id         = aws_route_table.app-route["${count.index}"].id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.int_gw["${count.index}"].id
}

resource "aws_route" "jumpbox1_route" {
  count                  = 2
  route_table_id         = aws_route_table.app-route["${count.index}"].id
  destination_cidr_block = "68.154.48.186/32"
  gateway_id             = aws_internet_gateway.int_gw["${count.index}"].id
}

# resource "aws_route" "jumpbox2_route" {
#   count                  = 2
#   route_table_id         = aws_route_table.app-route["${count.index}"].id
#   destination_cidr_block = "52.9.113.154/32"
#   gateway_id             = aws_internet_gateway.int_gw["${count.index}"].id
# }

resource "aws_route_table_association" "app_association" {
  count          = 2
  subnet_id      = aws_subnet.app_subnet["${count.index}"].id
  route_table_id = aws_route_table.app-route["${count.index}"].id
}

##### Mgmt RouteTable

resource "aws_route_table" "mgmt-route" {
  vpc_id = aws_vpc.app_vpc[0].id
  tags = {
    Name = "pod${var.pod_number}-app1-mgmt-rt"
  }
}

resource "aws_route" "mgmt_default_route" {
  route_table_id         = aws_route_table.mgmt-route.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.int_gw[0].id
}

resource "aws_route_table_association" "mgmtRT_association" {
  subnet_id      = aws_subnet.mgmt_subnet.id
  route_table_id = aws_route_table.mgmt-route.id
}

##################################################################################################################################
# Outputs
##################################################################################################################################

output "app1-public-eip" {
  value = aws_eip.app-EIP[0].public_ip
}

output "app2-public-eip" {
  value = aws_eip.app-EIP[1].public_ip
}

output "app1-private-ip" {
  value = "10.${var.pod_number}.100.10"
}

output "app2-private-ip" {
  value = "10.${var.pod_number + 100}.100.10"
}

output "Command_to_use_for_ssh_into_app1_vm" {
  value = "ssh -i pod${var.pod_number}-private-key ubuntu@${aws_eip.app-EIP[0].public_ip}"
}

output "Command_to_use_for_ssh_into_app2_vm" {
  value = "ssh -i pod${var.pod_number}-private-key ubuntu@${aws_eip.app-EIP[1].public_ip}"
}

output "http_command_app1" {
  value = "http://${aws_eip.app-EIP[0].public_ip}"
}

output "http_command_app2" {
  value = "http://${aws_eip.app-EIP[1].public_ip}"
}
